--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.25.1)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 project(fps_animate)
 
-add_executable(${PROJECT_NAME} src/hello.c)
+add_executable(${PROJECT_NAME} src/main.c)
 
 add_subdirectory(./lib/SDL3-3.2.22)
 add_subdirectory(./lib/SDL3_image-3.2.4)
